--- a/index.html
+++ b/index.html
@@ -114,12 +114,7 @@
   var dataTime = d3.range(0, 11, 2).map(function(d) {
     return new Date(2010 + d, 10, 3);
   });
-    
-  function sleep(ms) {
-      var n = new Date().getTime();
-      while(new Date().getTime() < n + ms) { }
-  }
-
+            
   var sliderTime = d3
     .sliderBottom()
     .min(d3.min(dataTime))
@@ -135,14 +130,12 @@
         if(x % 2 != 0) {
             x--;
         }
-        //ChangeYear();
-        //sleep(100);
         d3.select('p#value-time').text(d3.timeFormat('%Y')(val));
-        //sleep(100);
-        console.log(1);
         if (x != year1) {
            year1 = x;
-            ChangeDisplay(false); 
+           ChangeYear();
+           previous_year = year1;
+           //ChangeDisplay(false); 
         }
     });
 
