--- a/index.html
+++ b/index.html
@@ -50,7 +50,24 @@
 
             <!-- Left sidebar (Static Tooltip) -->
             <div class="col-md-3">
-
+                <!-- Static Tooltip -->
+                <div class="static-tooltip">
+                    <!--<div id="plant-head" class="nickname"> Select a Plant <br><text style="text-align: center; color: darkgray"> Scientific Name<br></text></div>
+                    <div style="height: 150px;padding-left: 10px">
+                        <div class="pic-container" style="float:left;">
+                            <img class='resize_fit_center' />
+        
+                        </div>
+                        <div id="habit-tip" style=" float: center;padding-top:10px;">
+                            <b>Plant Habit </b><br><br><b>Type</b> <br>
+                        </div>
+                    </div>
+                    <div style=" float: left;text-align: left;font-weight:bold; font-size: 10pt">
+                        Sunlight: <br> Soil Indicator: <br> Water Amount: <br> Height: <br> Spread
+                        <br> Indoor Flowering: <br> Bloom Period: <br> Bloom Description: <br> Humidity: <br> Air Purifying: <br> Soil PH:<br>
+                    </div>
+                    <div id="static-tip-data" style="float: right;text-align: right;font-size: 10pt"> </div> -->
+                </div>
             </div>
 
             <!-- Middle Column -->
@@ -88,8 +105,8 @@
         <script src="directed_graph.js"></script>
         <script src="selection.js"></script> -->
 <!-- Left sidebar (Static Tooltip) -->
-<div class="col-md-3">
-                <!-- Static Tooltip -->
+<!-- <div class="col-md-3">
+                <!-- Static Tooltip
                 <div class="static-tooltip">
                     <div id="plant-head" class="nickname"> Select a Plant <br><text style="text-align: center; color: darkgray"> Scientific Name<br></text></div>
                     <div style="height: 150px;padding-left: 10px">
@@ -108,7 +125,7 @@
                     <div id="static-tip-data" style="float: right;text-align: right;font-size: 10pt"> </div>
                 </div>
         
-            </div>
+</div> -->
 
     <!-- Middle Column: putting map here -->
     <div class="col-md-8">
