added github link

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
 
             <p style="text-align: center; font-size: 15px">In collaboration with Suresh K. Lodha, Omkar Ghanekar, and Jacob Low</p>
 
-            <p style="text-align: center; line-height: 8px; font-size: 25px">Site is hosted on GitHub Pages <a href="https://rubui.github.io/CMPS165_Final_Project/graph.html">here</a>. </p>
+            <p style="text-align: center; line-height: 8px; font-size: 25px">Site is hosted on GitHub Pages <a href="https://jnadler-block.github.io/CSE-163/">here</a>. </p>
             <br>
         </div>
 
@@ -225,7 +225,7 @@
             <div class="col-md-3 ">
                 <h4 class="sources_header" style="text-align: center">Files</h4>
                 <ul class="sources_list">
-                    <li><a href="https://github.com/rubui/CMPS165_Final_Project">GitHub Repository Link</a></li>
+                    <li><a href="https://jnadler-block.github.io/CSE-163/">GitHub Repository Link</a></li>
                     <li>CloseElections.html</li>
                     <li>graph.html</li>
                     <li>directed_graph.js</li>
