--- a/index.html
+++ b/index.html
@@ -41,6 +41,16 @@
         <!-- Title -->
         <h1>Close House Elections</h1>
 
+        <!-- Intro blurb-->
+        <div class id = blurb>
+            <p> The visualization below displays election results for the U.S. House of Representatives over the course of 2010 to 2020. 
+                The data can be viewed by year, and an overview of each year’s House election can be seen to the left of the map. Additionally, 
+                details about each district’s election results can be seen when hovering over its location on the map. District lines can be easily 
+                seen with the pan and zoom feature. Press the button to highlight districts where the results are especially close, meaning the top two candidates are within 5% of each other. 
+            </p>
+        </div>
+        <hr>
+
         </p>
 
         <!--<br>-->
