--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
             <hr>
             <!-- Group Members  -->
             <div class="group_members">
-                <h3 class="sources_header" style="line-height: 50px">
+                <h3 class="sources_header" style="line-height: 10px; font-size: 15px; width: 99.99%">
                     Group Members</h3>
 
                 <ul class="list-unstyled" style="text-align: center">
@@ -182,21 +182,21 @@
 
                 </ul>
 
-                <p style="text-align: center; font-size: 15px">In collaboration with Suresh K. Lodha, Omkar Ghanekar, and Jacob Low</p>
+                <p style="text-align: center; font-size: 14px">In collaboration with Suresh K. Lodha, Omkar Ghanekar, and Jacob Low</p>
 
-            <p style="text-align: center; line-height: 8px; font-size: 25px">Site is hosted on GitHub Pages <a href="https://jnadler-block.github.io/CSE-163/">here</a>. </p>
+            <p style="text-align: center; line-height: 8px; font-size: 14px">Site is hosted on GitHub Pages <a href="https://jnadler-block.github.io/CSE-163/">here</a>. </p>
         </div>
 
         <!-- Designed For -->
         <div class="group_members">
-            <h3 class="sources_header" style="line-height: 50px">
+            <h3 class="sources_header" style="line-height: 20px; font-size: 15px; width: 99.9%">
             <p style="text-align: center">CSE 163: Data Programming for Visualization, Fall 2022</p>
         </div>
 
         <!-- Resources -->
         <div class="row" id="sources">
             <div class="col-md-3 ">
-                <h4 class="sources_header" style="text-align: center">Files</h4>
+                <h4 class="sources_header" style="text-align: center; font-size: 15px">Files</h4>
                 <ul class="sources_list">
                     <li><a href="https://jnadler-block.github.io/CSE-163/">GitHub Repository Link</a></li>
                     <li>index.html</li>
