added Data Sources

--- a/index.html
+++ b/index.html
@@ -221,8 +221,9 @@
             <div class="col-md-3">
                 <h4 class="sources_header" style="text-align: center">Data Sources</h4>
                 <ul class="sources_list">
-                    <li><a href="https://plants.usda.gov/adv_search.html">USDA Plants Dataset</a></li>
-                    <li><a href="https://img.buzzfeed.com/buzzfeed-static/static/2015-03/19/12/enhanced/webdr13/enhanced-1008-1426782359-1.jpg?downsize=715:*&output-format=auto&output-quality=auto">House Plant Watering Chart</a></li>
+                    <li><a href="https://dataverse.harvard.edu/dataset.xhtml?persistentId=doi:10.7910/DVN/IG0UN2">US House Data</a></li>
+                    <li><a href="https://eric.clst.org/tech/usgeojson/">2010 GeoJSON</a></li>
+                    <li><a href="https://github.com/unitedstates/districts/tree/gh-pages/states">2012-2020 GeoJSON</a></li>
                 </ul>
             </div>
         </div>
