added some files

--- a/index.html
+++ b/index.html
@@ -203,6 +203,8 @@
                     <li>CloseElections.js</li>
                     <li>CloseElectionsStyle.css</li>
                     <li>HouseElectionResults.csv</li>
+                    <li>USDistricts2010.json</li>
+                    <li>USDistricts2012.json</li>
                 </ul>
             </div>
             <div class="col-md-3">
