Small wording change in Insights

--- a/index.html
+++ b/index.html
@@ -3,10 +3,7 @@
 <head>
     <!-- Meta Tag -->
     <meta charset="utf-8">
-    <meta
-  name="viewport"
-  content="width=device-width, initial-scale=1, shrink-to-fit=no"
-/>
+    <meta name="viewport"content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
     <title>Close Elections</title>
 
      <!--  CSS Stylesheet  -->
@@ -43,8 +40,8 @@
 
         <!-- Intro blurb-->
         <div class id = blurb>
-            <p> Out of the six midterm elections shown, 2016 had the least (16) close elections and 2018 had the most (44). 
-                Texas District 23 consistently fell into the close election category, ranging from a vote margin of 4.95% in 2010 to 0.44% in 2018. 
+            <p> From the years 2010 to 2020, 2016 had the least (16) close elections and 2018 had the most (44). 
+                Texas District 23 consistently fell into the close election category, ranging from a vote margin of 4.95% in 2010 to only 0.44% in 2018. 
                 Although Republicans won more House seats over the course of 2010 to 2016, Democrats won more close elections.
             </p>
         </div>
