Added one more insight

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <!-- Intro blurb-->
         <div class id = blurb>
             <p> From the years 2010 to 2020, 2016 had the least (16) close elections and 2018 had the most (44). 
-                Texas District 23 consistently fell into the close election category, ranging from a vote margin of 4.95% in 2010 to only 0.44% in 2018. 
+                Texas District 23 consistently fell into the close election category, ranging from a vote margin of 4.95% in 2010 to only 0.44% in 2018. Democrats won 53.5% of close elections in this time frame, while Republicans only won 46.5%.
                 Although Republicans won more House seats over the course of 2010 to 2016, Democrats won more close elections.
             </p>
         </div>
